cmake_minimum_required (VERSION 2.8)

if (BUILD_STAGE MATCHES libafwdatabase)
add_subdirectory(libafwdatabase)
elseif(BUILD_STAGE MATCHES atdbwriterclient)
add_subdirectory(atdbwriterclient)
elseif(BUILD_STAGE MATCHES atdbwritertimerd)
add_subdirectory(atdbwritertimerd)
elseif(BUILD_STAGE MATCHES atphclient)
add_subdirectory(atphclient)
endif()